--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.1"
+djangorestframework = "^3.15.2"
+djangorestframework-simplejwt = "^5.3.1"
+django-cors-headers = "^4.4.0"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
