--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-json-view-lite": "^1.5.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "rehype-katex": "^7.0.1",
